Implement binary search tree remaining methods